--- a/src/LoginSocial/styles.css
+++ b/src/LoginSocial/styles.css
@@ -1,63 +1,68 @@
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 .login_social {
-    background-image: url('https://preview.hqtemplate.com/preview16/images/background-login-2.svg');
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: 75% 15%;
-    padding: 50px 0;
-    min-height: 100vh;
+  background-image: url('https://preview.hqtemplate.com/preview16/images/background-login-2.svg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: 75% 15%;
+  padding: 50px 0;
+  min-height: 100vh;
 }
 
 .login_content {
-    background-color: #fff;
+  background-color: #fff;
 }
-.height_content{
-    height: calc(100vh - 100px);
+.height_content {
+  height: calc(100vh - 100px);
 }
 .img_banner {
-    vertical-align: middle;
-    border-style: none;
-    width: 100%;
-    height: 75vh;
-    padding-top: 50px;
+  vertical-align: middle;
+  border-style: none;
+  width: 100%;
+  height: 75vh;
+  padding-top: 50px;
 }
 .login_item {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    height: 100%;
-    justify-content: center;
-    padding: 50px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100%;
+  justify-content: center;
+  padding: 50px 0;
 }
-.login_item h1{
-    text-align: center;
-    font-weight: bold;
-    margin-bottom: 40px;
-    font-size: 24px;
+.login_item h1 {
+  text-align: center;
+  font-weight: bold;
+  margin-bottom: 40px;
+  font-size: 24px;
 }
 .facebook,
 .google {
+  display: flex;
+  align-items: center;
   color: #fff;
   border: none;
   font-size: 18px;
-  padding: 10px;
+  padding: 10px 20px;
   line-height: 30px;
   border-radius: 8px;
   width: 250px;
-    margin-bottom: 25px;
+  margin-bottom: 25px;
 }
 .facebook {
-  background-color: #3B5998;
+  background-color: #3b5998;
 }
 .google {
   background-color: #cf4332;
 }
+.icon-login {
+  margin-right: 10px;
+}
 
 @media only screen and (max-width: 767px) {
-    .height_content{
-        height: 100%;
-    }
+  .height_content {
+    height: 100%;
+  }
 }
