--- a/src/HomeSidebar/homeSidebar.css
+++ b/src/HomeSidebar/homeSidebar.css
@@ -125,7 +125,7 @@
   margin-bottom: 25px;
 }
 .btnEndVote button:hover {
-  background-color: #f4511e;
+  background-color: #782c81;
   color: #fff;
   border: none;
 }
