--- a/src/HomeSidebar/style.css
+++ b/src/HomeSidebar/style.css
@@ -15,7 +15,7 @@
 .btnAdd {
   width: 100%;
   height: 10vh;
-  background-color: rgba(70, 23, 143, 1);
+  background-color: #782c81;
   color: #fff;
   border-radius: 10px;
   z-index: 100000000;
