--- a/src/LoginSocial/styles.css
+++ b/src/LoginSocial/styles.css
@@ -21,8 +21,7 @@
   vertical-align: middle;
   border-style: none;
   width: 100%;
-  height: 75vh;
-  padding-top: 50px;
+  height: calc(100vh - 100px);
 }
 .login_item {
   display: flex;
@@ -35,8 +34,14 @@
 .login_item h1 {
   text-align: center;
   font-weight: bold;
-  margin-bottom: 40px;
   font-size: 24px;
+  padding: 0 20px;
+}
+.login_item h5{
+  margin-bottom: 40px;
+  font-size: 16px;
+  padding: 0 20px;
+  text-align: center;
 }
 .facebook,
 .google {
@@ -52,7 +57,7 @@
   margin-bottom: 25px;
 }
 .facebook {
-  background-color: #3b5998;
+  background-color: #2c3c9b;
 }
 .google {
   background-color: #cf4332;
