--- a/src/HomeSidebar/style.css
+++ b/src/HomeSidebar/style.css
@@ -36,3 +36,14 @@
   left: 50%;
   transform: translateX(-50%);
 }
+.map_marker {
+  position: relative;
+}
+.map_word {
+  position: absolute;
+  top: -20px;
+  left: 30;
+  width: 250px;
+  color: #9737a2;
+  text-align: left;
+}
